--- a/apps/crud/templates/crud/edit.html
+++ b/apps/crud/templates/crud/edit.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>ユーザー編集</title>
-    <link rel="stylesheet" href="{{url_for('crud.static', filename='style.css')}}" />
-</head>
-<body>
+{% extends "crud/base.html" %}
+{%block title%}ユーザー編集{% endblock %}
+{% block content %}
     <h2>ユーザー編集</h2>
 
     <form 
@@ -39,5 +34,4 @@
         {{ form.csrf_token }}
         <input type="submit" value="削除">
     </form>
-</body>
-</html>
+{%endblock%}
