--- a/apps/crud/templates/crud/create.html
+++ b/apps/crud/templates/crud/create.html
@@ -1,4 +1,4 @@
-{% extends "crud/base.htl" %}
+{% extends "crud/base.html" %}
 {%block title%}ユーザー新規作成{%endblock%}
 {%block content%}
     <h2>ユーザー新規作成</h2>
