--- a/apps/auth/templates/auth/login.html
+++ b/apps/auth/templates/auth/login.html
@@ -1,10 +1,10 @@
 {% extends "auth/base.html" %}
-{% block title %}ユーザー新規登録{% endblock %}
+{% block title %}ログイン{% endblock %}
 {% block content %}
-<h2>ユーザー新規登録</h2>
+<h2>ログイン</h2>
 
 <form 
-    action="{{ url_for('auth.signup', next=request.args.get('next')) }}"
+    action="{{ url_for('auth.login')}}"
     method="POST"
     novalidate="novalidate"
 >
@@ -12,13 +12,6 @@
 <p style="color: red;">{{ message }}</p>
 {% endfor %}
 {{ form.csrf_token }}
-<p>
-{{ form.username.label}}
-{{ form.username(size=30, placeholder="ユーザー名") }}
-</p>
-{% for error in form.username.errors %}
-<span style="color: red;">{{ error }}</span>
-{% endfor %}
 <p>
     {{ form.email.label}}
     {{ form.email(placeholder="メールアドレス") }}
